implemented getBestActor for each year by highest average ratings (in Nomination)